--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "glfw"]
 	path = glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "PixelExplorer/src/vendor/glm"]
+	path = PixelExplorer/src/vendor/glm
+	url = https://github.com/g-truc/glm.git
