Start RenderMesh class

--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\RefCount.h" />
     <ClInclude Include="src\rendering\RenderGlobal.h" />
+    <ClInclude Include="src\rendering\RenderMesh.h" />
     <ClInclude Include="src\rendering\RenderWindow.h" />
     <ClInclude Include="src\rendering\Shader.h" />
   </ItemGroup>
