--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\RefCount.h" />
     <ClInclude Include="src\rendering\Material.h" />
+    <ClInclude Include="src\rendering\MaterialProperties.h" />
     <ClInclude Include="src\rendering\RenderGlobal.h" />
     <ClInclude Include="src\rendering\RenderMesh.h" />
     <ClInclude Include="src\rendering\RenderObject.h" />
