--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -145,6 +145,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\game\block\RenderShape.cpp" />
+    <ClCompile Include="src\game\block\Shape.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\rendering\Material.cpp" />
@@ -163,6 +165,8 @@
     <ClCompile Include="src\vendor\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\block\RenderShape.h" />
+    <ClInclude Include="src\game\block\Shape.h" />
     <ClInclude Include="src\game\Game.h" />
     <ClInclude Include="src\game\gui\MainMenu.h" />
     <ClInclude Include="src\game\gui\TestScreen.h" />
