--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="src\vendor\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\block\Block.h" />
     <ClInclude Include="src\game\block\RenderShape.h" />
     <ClInclude Include="src\game\block\Shape.h" />
     <ClInclude Include="src\game\Game.h" />
