--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -158,10 +158,10 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\rendering\GLObject.cpp" />
     <ClCompile Include="src\rendering\Material.cpp" />
-    <ClCompile Include="src\rendering\RenderMesh.cpp" />
+    <ClCompile Include="src\rendering\ExampleRenderMesh.cpp" />
     <ClCompile Include="src\rendering\RenderWindow.cpp" />
     <ClCompile Include="src\rendering\Shader.cpp" />
-    <ClCompile Include="src\rendering\Texture.cpp" />
+    <ClCompile Include="src\rendering\GlTexture.cpp" />
     <ClCompile Include="src\vendor\imgui\backends\imgui_impl_glfw.cpp" />
     <ClCompile Include="src\vendor\imgui\backends\imgui_impl_opengl3.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui.cpp" />
@@ -185,6 +185,7 @@
     <ClInclude Include="src\game\gui\TestScreen.h" />
     <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\RefCount.h" />
+    <ClInclude Include="src\rendering\BasicGLRenderObject.h" />
     <ClInclude Include="src\rendering\GLAsset.h" />
     <ClInclude Include="src\rendering\GLObject.fwd.h" />
     <ClInclude Include="src\rendering\GLObject.h" />
@@ -192,12 +193,11 @@
     <ClInclude Include="src\rendering\Material.h" />
     <ClInclude Include="src\rendering\MaterialProperties.h" />
     <ClInclude Include="src\rendering\RenderGlobal.h" />
-    <ClInclude Include="src\rendering\RenderMesh.h" />
-    <ClInclude Include="src\rendering\RenderObject.h" />
+    <ClInclude Include="src\rendering\ExampleRenderMesh.h" />
     <ClInclude Include="src\rendering\RenderWindow.fwd.h" />
     <ClInclude Include="src\rendering\RenderWindow.h" />
     <ClInclude Include="src\rendering\Shader.h" />
-    <ClInclude Include="src\rendering\Texture.h" />
+    <ClInclude Include="src\rendering\GLTexture.h" />
     <ClInclude Include="src\vendor\imgui\backends\imgui_impl_glfw.h" />
     <ClInclude Include="src\vendor\imgui\backends\imgui_impl_opengl3.h" />
     <ClInclude Include="src\vendor\imgui\backends\imgui_impl_opengl3_loader.h" />
