--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -151,9 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\game\block\Block.cpp" />
-    <ClCompile Include="src\game\block\RenderShape.cpp" />
-    <ClCompile Include="src\game\block\Shape.cpp" />
+    <ClCompile Include="src\game\chunk\ChunkRenderMesh.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\rendering\GLObject.cpp" />
@@ -173,12 +171,13 @@
     <ClCompile Include="src\vendor\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\DataBuffer.h" />
     <ClInclude Include="src\game\block\Block.h" />
-    <ClInclude Include="src\game\block\BlockInstance.h" />
+    <ClInclude Include="src\game\block\BlockDefinition.h" />
+    <ClInclude Include="src\game\block\BlockFaceDefinition.h" />
     <ClInclude Include="src\game\block\FaceDirection.h" />
-    <ClInclude Include="src\game\block\RenderShape.h" />
-    <ClInclude Include="src\game\block\Shape.h" />
     <ClInclude Include="src\game\chunk\Chunk.h" />
+    <ClInclude Include="src\game\chunk\ChunkManager.h" />
     <ClInclude Include="src\game\chunk\ChunkRenderMesh.h" />
     <ClInclude Include="src\game\Game.h" />
     <ClInclude Include="src\rendering\GLRenderObject.h" />
