--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -171,10 +171,12 @@
     <ClCompile Include="src\vendor\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Color.h" />
     <ClInclude Include="src\DataBuffer.h" />
     <ClInclude Include="src\game\block\Block.h" />
     <ClInclude Include="src\game\block\BlockDefinition.h" />
     <ClInclude Include="src\game\block\BlockFaceDefinition.h" />
+    <ClInclude Include="src\game\block\BlockManifest.h" />
     <ClInclude Include="src\game\block\FaceDirection.h" />
     <ClInclude Include="src\game\chunk\Chunk.h" />
     <ClInclude Include="src\game\chunk\ChunkManager.h" />
