--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -155,12 +155,12 @@
     <ClCompile Include="src\game\chunk\ChunkRenderMesh.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\rendering\GLObject.cpp" />
-    <ClCompile Include="src\rendering\Material.cpp" />
-    <ClCompile Include="src\rendering\ExampleRenderMesh.cpp" />
-    <ClCompile Include="src\rendering\RenderWindow.cpp" />
-    <ClCompile Include="src\rendering\Shader.cpp" />
-    <ClCompile Include="src\rendering\GlTexture.cpp" />
+    <ClCompile Include="src\engine\rendering\GLObject.cpp" />
+    <ClCompile Include="src\engine\rendering\Material.cpp" />
+    <ClCompile Include="src\engine\rendering\ExampleRenderMesh.cpp" />
+    <ClCompile Include="src\engine\rendering\RenderWindow.cpp" />
+    <ClCompile Include="src\engine\rendering\Shader.cpp" />
+    <ClCompile Include="src\engine\rendering\GlTexture.cpp" />
     <ClCompile Include="src\vendor\imgui\backends\imgui_impl_glfw.cpp" />
     <ClCompile Include="src\vendor\imgui\backends\imgui_impl_opengl3.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui.cpp" />
@@ -172,8 +172,8 @@
     <ClCompile Include="src\vendor\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Color.h" />
-    <ClInclude Include="src\DataBuffer.h" />
+    <ClInclude Include="src\common\Color.h" />
+    <ClInclude Include="src\common\DataBuffer.h" />
     <ClInclude Include="src\game\block\Block.h" />
     <ClInclude Include="src\game\block\BlockDefinition.h" />
     <ClInclude Include="src\game\block\BlockFaceDefinition.h" />
@@ -184,25 +184,25 @@
     <ClInclude Include="src\game\chunk\ChunkManager.h" />
     <ClInclude Include="src\game\chunk\ChunkRenderMesh.h" />
     <ClInclude Include="src\game\Game.h" />
-    <ClInclude Include="src\rendering\Camera.h" />
-    <ClInclude Include="src\rendering\CameraInterface.h" />
-    <ClInclude Include="src\rendering\GLRenderObject.h" />
+    <ClInclude Include="src\engine\Camera.h" />
+    <ClInclude Include="src\engine\rendering\CameraInterface.h" />
+    <ClInclude Include="src\engine\rendering\GLRenderObject.h" />
     <ClInclude Include="src\game\gui\MainMenu.h" />
-    <ClInclude Include="src\game\gui\TestScreen.h" />
-    <ClInclude Include="src\Logger.h" />
-    <ClInclude Include="src\RefCount.h" />
-    <ClInclude Include="src\rendering\GLObject.fwd.h" />
-    <ClInclude Include="src\rendering\GLObject.h" />
-    <ClInclude Include="src\rendering\GLNode.h" />
-    <ClInclude Include="src\rendering\GUIElement.h" />
-    <ClInclude Include="src\rendering\Material.h" />
-    <ClInclude Include="src\rendering\MaterialProperties.h" />
-    <ClInclude Include="src\rendering\RenderGlobal.h" />
-    <ClInclude Include="src\rendering\ExampleRenderMesh.h" />
-    <ClInclude Include="src\rendering\RenderWindow.fwd.h" />
-    <ClInclude Include="src\rendering\RenderWindow.h" />
-    <ClInclude Include="src\rendering\Shader.h" />
-    <ClInclude Include="src\rendering\GLTexture.h" />
+    <ClInclude Include="src\common\Logger.h" />
+    <ClInclude Include="src\common\RefCount.h" />
+    <ClInclude Include="src\engine\rendering\GLObject.fwd.h" />
+    <ClInclude Include="src\engine\rendering\GLObject.h" />
+    <ClInclude Include="src\engine\rendering\GLNode.h" />
+    <ClInclude Include="src\engine\rendering\GUIElement.h" />
+    <ClInclude Include="src\engine\InputManager.h" />
+    <ClInclude Include="src\engine\rendering\Material.h" />
+    <ClInclude Include="src\engine\rendering\MaterialProperties.h" />
+    <ClInclude Include="src\engine\rendering\RenderGlobal.h" />
+    <ClInclude Include="src\engine\rendering\ExampleRenderMesh.h" />
+    <ClInclude Include="src\engine\rendering\RenderWindow.fwd.h" />
+    <ClInclude Include="src\engine\rendering\RenderWindow.h" />
+    <ClInclude Include="src\engine\rendering\Shader.h" />
+    <ClInclude Include="src\engine\rendering\GLTexture.h" />
     <ClInclude Include="src\vendor\imgui\backends\imgui_impl_glfw.h" />
     <ClInclude Include="src\vendor\imgui\backends\imgui_impl_opengl3.h" />
     <ClInclude Include="src\vendor\imgui\backends\imgui_impl_opengl3_loader.h" />
@@ -219,8 +219,8 @@
   <ItemGroup>
     <None Include="assets\shaders\base.shader" />
     <None Include="assets\shaders\cube.shader" />
-    <None Include="src\Logger.inl" />
-    <None Include="src\RefCount.inl" />
+    <None Include="src\common\Logger.inl" />
+    <None Include="src\common\RefCount.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
