--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -176,6 +176,7 @@
   <ItemGroup>
     <ClInclude Include="src\common\Color.h" />
     <ClInclude Include="src\common\DataBuffer.h" />
+    <ClInclude Include="src\common\OSHelpers.h" />
     <ClInclude Include="src\common\Timer.h" />
     <ClInclude Include="src\engine\input\InputAction.h" />
     <ClInclude Include="src\engine\input\InputSource.h" />
@@ -223,6 +224,7 @@
     <ClInclude Include="src\vendor\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="assets\blocks\faces\GREEN_FACE.pxface" />
     <None Include="assets\shaders\base.shader" />
     <None Include="assets\shaders\cube.shader" />
     <None Include="src\common\Logger.inl" />
